--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style/style.css">
+        <script src="app.js" defer type="module"></script>
         <title>Echo Link</title>
     </head>
     <body>
-        
+        <div id="root">
+
+            <div id="app">
+
+                <aside class="left-side-bar"></aside>
+                <div class="chat"></div>
+                <aside class="right-side-bar"></aside>
+                
+            </div>
+
+        </div>
+
+
     </body>
     </html>
