--- a/client/index.html
+++ b/client/index.html
@@ -38,14 +38,36 @@
                     
                 </aside>
 
-                <div class="chat"></div>
+
+
+                <div class="chat">
+                    <div class="chat-display"></div>
+
+                    <div class="chat-area">
+                        <div class="chat-area-wrapper">
+                        <div id="chat-area-input">
+                            <button> <img src="./assets/icons/smile.svg" alt=""> </button>
+                            <input type="text" placeholder="Type a message">
+                            <button>
+                                <img src="./assets/icons/folder.svg" alt="">
+                                <input type="file" id="file" hidden>
+                            </button>
+                        </div>
+
+                        <div id="audio-msg">
+                            <img src="./assets/icons/mic.svg" alt="">
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+
 
                 <aside class="right-side-bar"></aside>
                 
             </div>
 
         </div>
-
 
     </body>
     </html>
