--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,9 @@
 
 
 
-                <aside class="right-side-bar"></aside>
+                <aside class="right-side-bar">
+                    
+                </aside>
                 
             </div>
 
